tests/sksl/errors/DuplicateRTAdjust.glsl
### Compilation failed:

error: 5: duplicate definition of 'sk_RTAdjust'
float4 sk_RTAdjust;
^^^^^^^^^^^^^^^^^^
1 error
